# renegate-fx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _clang-format
.github/workflows/: cmake.yml
installer/: UpdateReadyMemo.pas
resource/: Info.plist  renegate_editor.uidesc
source/: renegate_cids.h  renegate_config.cpp  renegate_config.h  renegate_controller.cpp  renegate_controller.h  renegate_entry.cpp  renegate_processor.cpp  renegate_processor.h  version.h
